# bish

./: DESIGN.md  README.md  pyproject.toml
bish/: __init__.py  dxbc.py  fxc.py  msw.py  vcs.py
bish/asm/: __init__.py  base.py  view.py
bish/asm/base/: __init__.py  custom_data.py  extensions.py  instructions.py  opcodes.py  operands.py  tokens.py
bish/chunks/: __init__.py  rdef.py  shex.py  sign.py  stat.py
bish/utils/: __init__.py
isd/: __init__.py  dxbc.py
